--- a/application/admin/View/Product/edit.html
+++ b/application/admin/View/Product/edit.html
@@ -13,6 +13,7 @@
                             <div class="widget-body am-fr">
 
                                 <form action="" method="post"class="am-form tpl-form-border-form tpl-form-border-br" enctype="multipart/form-data">
+                                    <input type="hidden" value="{$pdtRes.id}" name="id">
 <div class="am-form-group">
     <label for="user-name" class="am-u-sm-3 am-form-label">商品名称 <span class="tpl-form-line-small-title">Name</span></label>
     <div class="am-u-sm-9">
