--- a/application/admin/View/layout/left.html
+++ b/application/admin/View/layout/left.html
@@ -155,6 +155,59 @@
                     </ul>
                 </li>
 
+             <li class="sidebar-nav-link">
+                    <a href="javascript:;" class="sidebar-nav-sub-title">
+                        <i class="am-icon-table sidebar-nav-link-logo"></i> 库存管理
+                        <span class="am-icon-chevron-down am-fr am-margin-right-sm sidebar-nav-sub-ico"></span>
+                    </a>
+                    <ul class="sidebar-nav sidebar-nav-sub">
+                        <li class="sidebar-nav-link">
+                            <a href="javascript:;" class="sidebar-nav-sub-title">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 入库管理
+                            </a>
+
+                              <ul class="sidebar-nav sidebar-nav-sub">
+                                <li class="sidebar-nav-link">
+                                    <a href="{:url('input/lsted')}">
+                                        <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 入库单列表
+                                    </a>
+                                </li>
+
+                                <li class="sidebar-nav-link">
+                                    <a href="{:url('input/lst')}">
+                                        <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 待入库列表
+                                    </a>
+                                </li>
+                            </ul>
+
+                        </li>
+
+                        <li class="sidebar-nav-link">
+                            <a href="javascript:;" class="sidebar-nav-sub-title">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 出库管理
+                            </a>
+
+
+
+                            <ul class="sidebar-nav sidebar-nav-sub">
+                                <li class="sidebar-nav-link">
+                                    <a href="{:url('supplyList/lst')}">
+                                        <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 出库列表
+                                    </a>
+                                </li>
+
+                                <li class="sidebar-nav-link">
+                                    <a href="{:url('supplyList/add')}">
+                                        <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 待出库列表
+                                    </a>
+                                </li>
+                            </ul>
+
+
+                        </li>
+                    </ul>
+                </li>
+
                 <li class="sidebar-nav-link">
                     <a href="index.html" class="active">
                         <i class="am-icon-home sidebar-nav-link-logo"></i> 首页
