--- a/application/index/view/Supplier/add.html
+++ b/application/index/view/Supplier/add.html
@@ -3,7 +3,7 @@
 			<div class="col-main">
 				<div class="main-wrap">
 
-					<div class="user-info">
+					<div class="user-info" >
 						<!--标题 -->
 						<div class="am-cf am-padding">
 							<div class="am-fl am-cf"><strong class="am-text-danger am-text-lg">成为供应商</strong> / <small>Personal&nbsp;information</small></div>
@@ -20,7 +20,7 @@
 
 							<p class="am-form-help">头像</p>
 
-							<div class="info-m">
+						<!-- 	<div class="info-m">
 								<div><b>用户名：<i>小叮当</i></b></div>
 								<div class="u-level">
 									<span class="rank r2">
@@ -33,7 +33,7 @@
 									<span class="u-profile"><i class="bc_ee0000" style="width: 60px;" width="0">60分</i></span>
 									</a>
 								</div>
-							</div>
+							</div> -->
 						</div>
 
 						<!--个人信息 -->
