--- a/application/admin/View/Customer/lst.html
+++ b/application/admin/View/Customer/lst.html
@@ -66,7 +66,7 @@
             <td>{$vo.cus_phone}</td>
             <td>{$vo.cus_email}</td>
             <td>{$vo.cus_score}</td>
-            <td>{$vo.cus_cls_id}</td>
+            <td>{$vo.customerClass.cls_name}</td>
             <td>
                 <div class="tpl-table-black-operation">
                     <a href="{:url('edit',array('id'=>$vo['id']))}">
