--- a/application/admin/View/Product/add.html
+++ b/application/admin/View/Product/add.html
@@ -5,7 +5,7 @@
                     <div class="am-u-sm-12 am-u-md-12 am-u-lg-12">
                         <div class="widget am-cf">
                             <div class="widget-head am-cf">
-                                <div class="widget-title am-fl">边框表单</div>
+                                <div class="widget-title am-fl">增加新产品</div>
                                 <div class="widget-function am-fr">
                                     <a href="javascript:;" class="am-icon-cog"></a>
                                 </div>
