--- a/application/index/view/Customer/add.html
+++ b/application/index/view/Customer/add.html
@@ -3,7 +3,7 @@
 			<div class="col-main">
 				<div class="main-wrap">
 
-					<div class="user-info">
+					<div class="user-info" >
 						<!--标题 -->
 						<div class="am-cf am-padding">
 							<div class="am-fl am-cf"><strong class="am-text-danger am-text-lg">会员注册</strong> / <small>Personal&nbsp;information</small></div>
@@ -20,7 +20,7 @@
 
 							<p class="am-form-help">头像</p>
 
-							<div class="info-m">
+							<!-- <div class="info-m">
 								<div><b>用户名：<i>小叮当</i></b></div>
 								<div class="u-level">
 									<span class="rank r2">
@@ -33,11 +33,11 @@
 									<span class="u-profile"><i class="bc_ee0000" style="width: 60px;" width="0">60分</i></span>
 									</a>
 								</div>
-							</div>
+							</div> -->
 						</div>
 
 						<!--个人信息 -->
-						<div class="info-main">
+						<div class="info-main" >
 							<form action="" method="post" class="am-form am-form-horizontal" >
 
 							
@@ -65,30 +65,17 @@
 									</div>
 								</div> -->
 
+								
 								<div class="am-form-group">
-									<label for="user-birth" class="am-form-label">收货地址</label>
+									<label for="user-birth" class="am-form-label">登录密码</label>
 									<div class="am-form-content birth">
-										<input type="text" name="cus_address"/>
-										<!-- <div class="birth-select">
-											<select data-am-selected name="cus_address">
-												<option value="a">2015</option>
-												<option value="b">1987</option>
-											</select>
-											<em>年</em>
-										</div>
-										<div class="birth-select2">
-											<select data-am-selected>
-												<option value="a">12</option>
-												<option value="b">8</option>
-											</select>
-											<em>月</em></div>
-										<div class="birth-select2">
-											<select data-am-selected>
-												<option value="a">21</option>
-												<option value="b">23</option>
-											</select>
-											<em>日</em></div>-->
-
+										<input type="text" name="cus_password" placeholder="password"/>
+									</div> 							
+								</div>
+								<div class="am-form-group">
+									<label for="user-birth" class="am-form-label">确认密码</label>
+									<div class="am-form-content birth">
+										<input type="text"  placeholder="password"/>
 									</div> 							
 								</div>
 								<div class="am-form-group">
@@ -104,6 +91,12 @@
 										<input id="user-email" placeholder="Email" type="email" name="cus_email">
 
 									</div>
+								</div>
+								<div class="am-form-group">
+									<label for="user-birth" class="am-form-label">收货地址</label>
+									<div class="am-form-content birth">
+										<input type="text" name="cus_address" placeholder="Address"/>
+									</div> 							
 								</div>
 								<!-- <div class="am-form-group address" style="display: block;">
 									<label for="user-address" class="am-form-label">收货地址</label>
