--- a/application/index/view/layout/header.html
+++ b/application/index/view/layout/header.html
@@ -14,6 +14,9 @@
 		<link href="__index__/css/infstyle.css" rel="stylesheet" type="text/css">
 		<script src="__index__/AmazeUI-2.4.2/assets/js/jquery.min.js" type="text/javascript"></script>
 		<script src="__index__/AmazeUI-2.4.2/assets/js/amazeui.js" type="text/javascript"></script>
+
+
+
 			
 	</head>
 
@@ -23,7 +26,7 @@
 			<article>
 				<div class="mt-logo">
 					<!--顶部导航条 -->
-					<div class="am-container header">
+					<!-- <div class="am-container header">
 						<ul class="message-l">
 							<div class="topMessage">
 								<div class="menu-hd">
@@ -45,11 +48,11 @@
 							<div class="topMessage favorite">
 								<div class="menu-hd"><a href="#" target="_top"><i class="am-icon-heart am-icon-fw"></i><span>收藏夹</span></a></div>
 						</ul>
-						</div>
+						</div> -->
 
 						<!--悬浮搜索框-->
 
-						<div class="nav white">
+					<!-- 	<div class="nav white">
 							<div class="logoBig">
 								<li><img src="__index__/images/logobig.png" /></li>
 							</div>
@@ -61,7 +64,7 @@
 									<input id="ai-topsearch" class="submit am-btn" value="搜索" index="1" type="submit">
 								</form>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="clear"></div>
 					</div>
@@ -69,17 +72,17 @@
 			</article>
 		</header>
             <div class="nav-table">
-					   <div class="long-title"><span class="all-goods">全部分类</span></div>
+					   <div class="long-title"><span class="all-goods">功能列表</span></div>
 					   <div class="nav-cont">
 							<ul>
-								<li class="index"><a href="#">首页</a></li>
-                                <li class="qc"><a href="#">闪购</a></li>
-                                <li class="qc"><a href="#">限时抢</a></li>
-                                <li class="qc"><a href="#">团购</a></li>
-                                <li class="qc last"><a href="#">大包装</a></li>
+								<li class="index"><a href="{:url('Product/lst')}">产品展示</a></li>
+                                <li class="qc"><a href="{:url('Cart/lst')}">购物车</a></li>
+                                <li class="qc"><a href="{:url('Customer/add')}">用户注册</a></li>
+                                <li class="qc"><a href="{:url('Supplier/add')}">成为供应商</a></li>
+                                <!-- <li class="qc last"><a href="#">大包装</a></li> -->
 							</ul>
 						    <div class="nav-extra">
-						    	<i class="am-icon-user-secret am-icon-md nav-user"></i><b></b>我的福利
+						    	<i class="am-icon-user-secret am-icon-md nav-user"></i><b></b><a href="{:url('login/logout')}">退出登录</a>
 						    	<i class="am-icon-angle-right" style="padding-left: 10px;"></i>
 						    </div>
 						</div>
