剩余采购与运营管理

--- a/application/admin/View/Supply_list/add.html
+++ b/application/admin/View/Supply_list/add.html
@@ -172,6 +172,7 @@
              url: "{:url('getpdt')}",
              data: "spId="+a,
              success: function (data) {
+             // console.log(data);
                  $("#pdt").html("<option value=''>请选择产品</option>");
                  //对返回的分类进行遍历
                  $.each(data, function(i, item) {
