--- a/application/admin/View/layout/left.html
+++ b/application/admin/View/layout/left.html
@@ -155,6 +155,88 @@
                     </ul>
                 </li>
 
+     <li class="sidebar-nav-link">
+        <a href="javascript:;" class="sidebar-nav-sub-title">
+            <i class="am-icon-table sidebar-nav-link-logo"></i> 采购管理
+            <span class="am-icon-chevron-down am-fr am-margin-right-sm sidebar-nav-sub-ico"></span>
+        </a>
+        <ul class="sidebar-nav sidebar-nav-sub">
+            <li class="sidebar-nav-link">
+                <a href="{:url('stockout/lst')}" >
+                    <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 缺货列表
+                </a>
+
+
+
+            </li>
+
+           <!--  <li class="sidebar-nav-link">
+                <a href="javascript:;" class="sidebar-nav-sub-title">
+                    <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 分级管理
+                </a>
+
+
+
+                <ul class="sidebar-nav sidebar-nav-sub">
+                    <li class="sidebar-nav-link">
+                        <a href="{:url('cusclass/lst')}">
+                            <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 等级列表
+                        </a>
+                    </li>
+
+                    <li class="sidebar-nav-link">
+                        <a href="{:url('cusclass/add')}">
+                            <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 等级新增
+                        </a>
+                    </li>
+                </ul>
+
+
+            </li> -->
+        </ul>
+    </li>
+   <li class="sidebar-nav-link">
+        <a href="javascript:;" class="sidebar-nav-sub-title">
+            <i class="am-icon-table sidebar-nav-link-logo"></i> 订单管理
+            <span class="am-icon-chevron-down am-fr am-margin-right-sm sidebar-nav-sub-ico"></span>
+        </a>
+        <ul class="sidebar-nav sidebar-nav-sub">
+            <li class="sidebar-nav-link">
+                <a href="{:url('Order/lst')}" >
+                    <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 订单列表
+                </a>
+
+
+
+            </li>
+
+           <!--  <li class="sidebar-nav-link">
+                <a href="javascript:;" class="sidebar-nav-sub-title">
+                    <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 分级管理
+                </a>
+
+
+
+                <ul class="sidebar-nav sidebar-nav-sub">
+                    <li class="sidebar-nav-link">
+                        <a href="{:url('cusclass/lst')}">
+                            <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 等级列表
+                        </a>
+                    </li>
+
+                    <li class="sidebar-nav-link">
+                        <a href="{:url('cusclass/add')}">
+                            <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 等级新增
+                        </a>
+                    </li>
+                </ul>
+
+
+            </li> -->
+        </ul>
+    </li>
+
+
              <li class="sidebar-nav-link">
                     <a href="javascript:;" class="sidebar-nav-sub-title">
                         <i class="am-icon-table sidebar-nav-link-logo"></i> 库存管理
@@ -181,6 +263,11 @@
                             </ul>
 
                         </li>
+                        <li class="sidebar-nav-link">
+                            <a href="{:url('inventory/lst')}">
+                                <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 库存列表
+                            </a>
+                        </li>
 
                         <li class="sidebar-nav-link">
                             <a href="javascript:;" class="sidebar-nav-sub-title">
@@ -191,13 +278,13 @@
 
                             <ul class="sidebar-nav sidebar-nav-sub">
                                 <li class="sidebar-nav-link">
-                                    <a href="{:url('supplyList/lst')}">
+                                    <a href="{:url('output/lsted')}">
                                         <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 出库列表
                                     </a>
                                 </li>
 
                                 <li class="sidebar-nav-link">
-                                    <a href="{:url('supplyList/add')}">
+                                    <a href="{:url('output/lst')}">
                                         <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 待出库列表
                                     </a>
                                 </li>
